AC_PREREQ([2.63])
AC_INIT([cfgsystem], [1.0], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([cfgsystem.c])

PROJECTNAME=cfgsystem
AC_SUBST(PROJECTNAME)

# --enable-debug option
AC_ARG_ENABLE([debug],
	AC_HELP_STRING([--enable-debug],[Compile with debug options]),
	CFLAGS="$CFLAGS -g -DDEBUG",
	CFLAGS="$CFLAGS -O3"
)

# --with-libxml2=path-to-libxml2-git-repository
AC_ARG_WITH([libxml2],
[AC_HELP_STRING([--with-libxml2], [specific libxml2 location])],
[
	AC_CHECK_PROG([XML2_CONFIG], [xml2-config], [yes], [no], [$withval])
	if test "$XML2_CONFIG" = "no"; then
		AC_MSG_ERROR([Missing development package of libxml2.])
	fi
	CFLAGS="`$withval/xml2-config --cflags` $CFLAGS"
	LDFLAGS="`$withval/xml2-config --libs` $LDFLAGS"
	WITH_LIBXML2="$withval"
]
)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Use libtool
AC_PROG_LIBTOOL
# Always use ./libtool unless overridden from command-line
if test -z "$libtool"; then
	libtool='./libtool'
fi
AC_SUBST(libtool)

AC_PATH_PROG(NETOPEER_MANAGER, [netopeer-manager], [])
AC_SUBST(NETOPEER_MANAGER)

# Checks for libraries.
export PKG_CONFIG_PATH=/usr/local/${libdir##*/}/pkgconfig:$PKG_CONFIG_PATH

PKG_CHECK_MODULES(LIBNETCONF, libnetconf)
CPPFLAGS="$CPPFLAGS $LIBNETCONF_CFLAGS"
LIBS="$LIBS $LIBNETCONF_LIBS"

PKG_CHECK_MODULES(AUGEAS, augeas >= 1.0.0)
CPPFLAGS="$CPPFLAGS $AUGEAS_CFLAGS"
LIBS="$LIBS $AUGEAS_LIBS"

AC_SEARCH_LIBS([crypt_gensalt_ra], [crypt], ,AC_MSG_ERROR([crypt not found!]))

# Check for libxml2.
if test -z "$WITH_LIBXML2" ; then
	AC_CHECK_PROG([XML2_CONFIG], [xml2-config], [yes], [no])
	if test "$XML2_CONFIG" = "no"; then
		AC_MSG_ERROR([Missing development package of libxml2.])
	fi
	AC_CHECK_LIB([xml2], [main], [LIBS="`xml2-config --libs` $LIBS" CFLAGS="`xml2-config --cflags` $CFLAGS"], AC_MSG_ERROR([Libxml2 not found ]))
fi

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h libnetconf.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_TYPE_UINT32_T

# Checks for library functions.
#AC_CHECK_FUNCS([strdup])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
